# pyBFI

./: LICENSE  README.md  pybfi.py  pyproject.toml
sample/: hello_world.bf  hi.bf  hundred.bf  quine.bf
