[tool.poetry]
name = "pybfi"
version = "0.1.0"
description = "Simple brainfuck interpreter"
authors = ["tulimenot"]
license = "BSD2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.961"
yapf = "^0.32.0"
pydocstyle = "^6.1.1"

[tool.poetry.scripts]
bfi = "pybfi:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
